attempt fix autosizing tab text on mobile

--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ h2 {
 
 .list-item {
   width: 100%;
-  line-height: 1.5em;
+  line-height: 1em;
   margin-top: 1em;
 }
 
